# aiohttp_forms

./: .gitignore  README.md  pyproject.toml
aiohttp_forms/: __main__.py  dispatcher.py  exceptions.py  executor.py  handlers.py  settings.py  views.py
aiohttp_forms/storage/: __init__.py  base.py  memory.py
aiohttp_forms/templates/: base.html  form.html
aiohttp_forms/types/: __init__.py  field.py  form.py  shortcuts.py
examples/: base_usage.py
