[tool.poetry]
name = "aiohttp-forms"
version = "0.0.1dev2"
description = ""
authors = ["F0rzend <github.com/F0rzend>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.3"
aiohttp-jinja2 = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
